<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="20dp"
    android:background="@color/grey"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleCustom"
        android:layout_marginTop="21dp"
        android:textColor="@color/white"
        android:text="@string/set_time_toAlarm"
        android:textSize="16sp"
        android:layout_marginBottom="21dp"
        />
    <Switch
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        />
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <NumberPicker
            android:theme="@style/NumberPickerTheme"
            android:id="@+id/numberPicker_hours"
            android:layout_width="wrap_content"
            android:layout_height="250dp" />
        <TextView
            android:textSize="51sp"
            android:text="@string/delemiter"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <NumberPicker
            android:theme="@style/NumberPickerTheme"
            android:id="@+id/numberPicker_minute"
            android:layout_width="wrap_content"
            android:layout_height="250dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginEnd="7dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:id="@+id/cancelDialog"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_marginStart="7dp"
            android:backgroundTint="@color/colorAccent"
            android:id="@+id/goToWork"
            android:text="@string/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>



















































































